// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`测试 mountWechatComponent 1`] = `
{
  "bar": 0,
  "bbloon": false,
  "ddd": "aaa",
  "foo": "abc",
}
`;

exports[`测试 mountWechatComponent 2`] = `
{
  "bar": 123,
  "bbloon": false,
  "ddd": "aaa",
  "foo": "abc",
}
`;

exports[`测试 mountWechatComponent 3`] = `
{
  "bar": 123,
  "bbloon": false,
  "ddd": "2222",
  "foo": "abc",
}
`;
